# data-source-aggregator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  publish.yml
app/: __init__.py  audit.py  config.py  credentials.py  errors.py  main.py  models.py  registry.py
app/connectors/: __init__.py  base.py  google_sheets.py  ics_calendar.py
app/services/: __init__.py  budget.py  context_pack.py  fetch.py  relevance.py  result_text.py  search.py  source_ref.py
config/: credentials.yaml.example
config/sources/: calendar.example.yaml  jeep_wj_maintenance.example.yaml  leafs_calendar.example.yaml  vehicle_maintenance.example.yaml
docs/: deployment.md  smoke-tests.md
tests/: conftest.py  test_api_search_fetch.py  test_api_sources.py  test_config_loader.py  test_credentials.py  test_google_sheets_connector.py  test_ics_calendar_connector.py  test_models.py  test_registry.py  test_source_ref.py
